Farg'ona yoshlar hakatoni

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
         <item>Haftalik</item>
         <item>Oylik</item>
     </string-array>
+
+    <string-array name="spinner_entry2">
+        <item>Naxt pul</item>
+        <item>Uzcard</item>
+        <item>Visa karta</item>
+    </string-array>
 </resources>
